--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FirebaseMemoryBox</string>
+    <string name="title"><u>Memory Box</u></string>
 </resources>
