added all layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">FirebaseMemoryBox</string>
     <string name="title"><b>Memory Box</b></string>
+    <string name="spinner"><b>My Choice</b></string>
 </resources>
