added firebase code(FireBaseHelper not working)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">FirebaseMemoryBox</string>
     <string name="title"><b>Memory Box</b></string>
     <string name="spinner"><b>My Choice</b></string>
+
+    <string-array name="memoryRating">
+        <item></item>
+    </string-array>
 </resources>
